--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "expo": "^52.0.41",
-    "react": "19.0.0",
-    "react-native": "0.78.1"
+    "react": "^18.3.1",
+    "react-native": "^0.76.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -26,13 +26,13 @@
     "@react-native/metro-config": "0.78.1",
     "@react-native/typescript-config": "0.78.1",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.0.0",
+    "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.0.0",
-    "typescript": "5.0.4"
+    "typescript": "^5.8.2"
   },
   "engines": {
     "node": ">=18"
